--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "Artan Aliji",
   "license": "ISC",
+  "engines": {
+    "node": "20.x"
+  },
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -16,6 +19,8 @@
     "express": "^4.18.2",
     "http-status": "^1.6.2",
     "joi": "^17.9.2",
+    "sequelize": "^6.32.1",
+    "sqlite3": "^5.1.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.10.0"
