--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.8.0",
     "http-status": "^1.6.2",
     "joi": "^17.9.2",
     "sequelize": "^6.32.1",
